--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <resources>
 
-<!--    <string name="app_name">数字阿拉尔</string>-->
+    <string name="app_name">METRON</string>
 
 </resources>
