首页修改/提币提示文本/收益总次产UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="user_normal">普通用户</string>
     <string name="user_channel">渠道专员</string>
     <string name="coin_address_is">提币地址：%s</string>
+    <string name="total_assets_cny_is">≈ %s CNY</string>
 
 </resources>
